cabal-version:      2.4
name:               override-options-sample
version:            0.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             a5ob7r
maintainer:         12132068+a5ob7r@users.noreply.github.com
extra-source-files:
  CHANGELOG.md
  README.md

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

executable override-options-sample
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , base                  >=4.14
    , optparse-applicative  ^>=0.17

  ghc-options:      -W -Wall -Wcompat

  if flag(pedantic)
    ghc-options: -Werror
